# cpp-portfolio-starter

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
include/mylib/: vec2.hpp
src/: main.cpp
tests/: test_vec2.cpp
